--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1>Hi, I'm <span>Hamza</span><br>A <span id="typed"></span></h1>
       <p>I build and scale efficient systems as a DevOps engineer and web developer.</p>
     </div>
-    <img src="png.png" alt="Developer Illustration">
+    <img src="rpng.png" alt="Developer Illustration">
   </section>
 
   <section class="about" id="about">
